name:                caster
version:             0.0.1
synopsis:            https://github.com/kirisaki/caster
description:         Thread-safe, multicast, and not slow logger.
homepage:            https://github.com/kirisaki/caster
license:             BSD3
license-file:        LICENSE
author:              Akihito KIRISAKI
maintainer:          kirisaki@klaraworks.net
copyright:           Akihito KIRISAKI
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

library
  -- exposed-modules: 
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12
                     , fast-logger
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions: LambdaCase OverloadedStrings
