name:                caster
version:             0.0.1
synopsis:            Multicast, thread-safe, and not slow logger.
description:         Please see the README on GitHub at <https://github.com/kirisaki/caster#readme>
homepage:            https://github.com/kirisaki/caster#readme
bug-reports:         https://github.com/kirisaki/caster/issues
license:             BSD3
license-file:        LICENSE
author:              Akihito KIRISAKI
maintainer:          kirisaki@klaraworks.net
copyright:           Akihito KIRISAKI
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

library
  exposed-modules: System.Log.Caster
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12
                     , fast-builder
                     , text
                     , bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions: LambdaCase
                    , OverloadedStrings
                    , FlexibleInstances
                    , FlexibleContexts
                    , TypeSynonymInstances
                    , MultiParamTypeClasses

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Driver.hs
  build-depends:
      base >= 4 && < 5
    , tasty
    , tasty-discover
    , caster