name:                caster
version:             0.0.1
synopsis:            Multicast, thread-safe, and not slow logger.
description:         Please see the README on GitHub at <https://github.com/kirisaki/caster#readme>
homepage:            https://github.com/kirisaki/caster#readme
bug-reports:         https://github.com/kirisaki/caster/issues
license:             BSD3
license-file:        LICENSE
author:              Akihito KIRISAKI
maintainer:          kirisaki@klaraworks.net
copyright:           Akihito KIRISAKI
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/kirisaki/caster

library
  exposed-modules: System.Log.Caster
  -- other-extensions:
  build-depends:       base >=4
                     , bytestring
                     , fast-builder
                     , stm
                     , text
                     , unix-time
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions: LambdaCase
                    , OverloadedStrings
                    , FlexibleInstances
                    , FlexibleContexts
                    , TypeSynonymInstances
                    , MultiParamTypeClasses
                    , ExistentialQuantification

test-suite test
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  other-modules:
                CasterTest
  default-language:    Haskell2010
  hs-source-dirs:
                 test
  build-depends:
                base >= 4 && < 5
              , caster
              , bytestring
              , directory
              , text
              , fast-builder
              , QuickCheck
              , quickcheck-instances
              , tasty-hunit
              , tasty
              , tasty-discover
              , tasty-quickcheck
